@@ -18,9 +18,9 @@ do-upload:
 	if test -n "$$FILE_LIST"; \
 	then \
 	  echo "--- rsync upload started on `date` ---"; \
-	  rsync --relative --include='*.exe' -e ssh --size-only $$FILE_LIST $(_DCFSNAPSHOTDEST) && \
+	  rsync --relative --include='*.exe' -e "ssh -p $(DCFPORT)" --size-only $$FILE_LIST $(_DCFSNAPSHOTDEST) && \
 	  { \
-	    ssh $(DCFUSER)@$(DCFHOST) cd $(DCFHTDOCSDIR)\; chmod g+wx $$DIR_LIST\; chmod g+w $$FILE_LIST; \
+	    ssh -p $(DCFPORT) $(DCFUSER)@$(DCFHOST) cd $(DCFHTDOCSDIR)\; chmod g+wx $$DIR_LIST\; chmod g+w $$FILE_LIST; \
 	    rm -rf $(HTDOCSDIR)/*; \
 	  }; \
 	  echo "--- rsync upload finished on `date` ---"; \
